@@ -1,5 +1,5 @@
 #pragma once
-#include "SSLSocket.h"
+#include <Net/Socket.h>
 #include "messageProcessor/MessageProcessor.h"
 #include "message/Message.h"
 #include <memory>
@@ -8,14 +8,14 @@ namespace balancedbanana {
     namespace communication {
 		class Communicator {
 		private:
-			std::shared_ptr<SSLSocket> socket;
+			std::shared_ptr<Net::Socket> socket;
 
 			std::shared_ptr<MessageProcessor> processor;
 
 		public:
-			void Connect();
+			Communicator(const std::shared_ptr<Net::Socket> &socket, const std::shared_ptr<MessageProcessor>& processor);
 
-			void listen(const std::function<void(std::shared_ptr<Message>)>& callback);
+			Communicator(const std::string address, short port, const std::shared_ptr<MessageProcessor>& processor);
 
 			void send(const Message& message);
 
